more brand style changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg fixed-top">
             <a href="index.html" class="navbar-brand">
-                <img src="img/logo.svg" style="height:2em"><span style="font-weight: 500">&nbsp; TRENDY DOTS</span>
+                <img src="img/logo.svg" style="height:2em"><span style="font-weight: 500; font-size: 0.8em;">&nbsp; TRENDY DOTS</span>
             </a>
             <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span></span><span></span><span></span></button>
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
