added contact form

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://usebasin.com/f/06dcf3d4ebaf/ahoy.js" async defer></script>
 </head>
 
 <body>
@@ -78,8 +78,7 @@
                            
                         <div class="form-group">
                             <label for="clientMessage">Your Message</label>
-                            <textarea rows="4" cols="50" name="comment" required id="clientMessage">
-                            </textarea>
+                            <input type="text" name="clientMessage" placeholder="Tell us more :)" id="clientMessage" required>
                         </div>
                         <div class="form-group">
                             <button type="submit" class="submit btn btn-primary btn-shadow btn-gradient disabled">Send Message</button>
@@ -97,7 +96,7 @@
                     <h1>Data Design, Trend Analisys and more</h1>
                     <p class="hero-text">
                     Trendy Dots is a boutique digital lab. making <u>trend and prescriptive analysis</u> on the new and old markets. We model the internet user behaviours and forecast the evolution of markets, products, companite, people, etc using belading egde AI algorithms.</p>
-                    <div class="CTA"><a href="#features" class="btn btn-primary btn-shadow btn-gradient link-scroll">Discover More</a><a href="#" class="btn btn-outline-primary">Sign Up Now</a></div>
+                    <div class="CTA"><a href="#features" class="btn btn-primary btn-shadow btn-gradient link-scroll">Discover More</a><a href="#" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-primary">Contact Us</a></div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2"><img src="img/Macbook.png" alt="..." class="img-fluid"></div>
             </div>
