rephrased 'what we do'

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                 </span>
                 <span class="sections__index-total">04</span>
             </div>
+            
             <!-- navigation down -->
             <nav class="sections__nav">
                 <button class="sections__nav-item sections__nav-item--prev">
@@ -202,6 +203,7 @@
                     </svg>
                 </button>
             </nav>
+            
             <!-- sections our story-->
             <section class="section section--current">
                 <div class="section__content">
@@ -271,7 +273,7 @@
                     <h2 class="section__title">What &nbsp; we &nbsp; do</h2>
                     <p class="section__description">
                         <span class="section__description-inner">
-                             Basically all sorts of data science :)
+                             We apply data science best practices to big data, aimig to produce highly valuable knowledge. With a strong focus on user experience, we produce reports that tell stories with data.
 						    </span>
                     </p>
                 </div>
