--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
                 <ul class="section__facts">
                     <li class="section__facts-item">
                         <h3 class="section__facts-title">Trend analysis</h3>
-                        <span class="section__facts-detail">Looking at how data evolved over time</span>
+                        <span class="section__facts-detail">Looking at how data evolves over time</span>
                     </li>
                     <li class="section__facts-item">
-                        <h3 class="section__facts-title">Corelation analysis</h3>
-                        <span class="section__facts-detail">Associating data trends</span>
+                        <h3 class="section__facts-title">Correlation analysis</h3>
+                        <span class="section__facts-detail">Associating meaningful data trends</span>
                     </li>
                     <!--
                     <li class="section__facts-item">
