--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         }
 
     </style>
+
     <script>
         document.documentElement.className = "js";
         var supportsCssVars = function() {
@@ -76,9 +77,13 @@
     <!--script src="//tympanus.net/codrops/adpacks/analytics.js"></script-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://usebasin.com/f/06dcf3d4ebaf/ahoy.js" async defer></script>
+    
+    <link rel="stylesheet" type="text/css" href="css/jquery-eu-cookie-law-popup.css"/>
+    <script src="js/jquery-eu-cookie-law-popup.js"></script>
+    
 </head>
 
-<body class="loading">
+<body class="loading eupopup eupopup-bottom eupopup-style-compact">
     <svg class="hidden">
         <symbol id="icon-arrow" viewBox="0 0 24 24">
             <title>arrow</title>
