corrected copy - about us

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <h2 class="section__title">our &nbsp; story</h2>
                     <p class="section__description">
                         <span class="section__description-inner">
-						    Trendy Dots is a boutique digital lab. making trend and prescriptive analysis on the new and old markets. We model the internet user behaviours and forecast the evolution of markets, products, companite, people, etc using belading egde AI algorithms.
+						    Trendy Dots is a boutique digital lab. making trend and prescriptive analysis on the new and old markets. We model the internet user behaviours and forecast the evolution of markets, products, companies, people, etc. using belading egde AI algorithms.
 						  </span>
                     </p>
                 </div>
