--- a/experiments/pain/timelineCorrelation.html
+++ b/experiments/pain/timelineCorrelation.html
@@ -73,7 +73,7 @@
         <div class="row" style="height: 100%">
             <div style="height: 100%; width: 36%; padding: 30px" class="container-fluid no-gutters">
                 <div class="col" style="font-size: 21px; font-weight: 700; font-family: Monserrat">
-                    <img src="../../../images/logo.png" style="height: 1.2em" />
+                    <img src="./images/logo.png" style="height: 1.2em" />
                     <span style="color: black"> <b> trendy dots </b></span>
                 </div>
                 <br />
@@ -117,7 +117,7 @@
                 </ul>
                 <div id="myTabContent" class="tab-content" style="height:  calc(100% - 49px); overflow:  auto;">
                     <div class="tab-pane fade show active" id="chart" style="width: 90%; margin:5%; text-align: center">
-                        <img src="../../../images/loader3.gif" style="height: 10em"/>
+                        <img src="./images/loader3.gif" style="height: 10em"/>
                     </div>
 
                     <div class="tab-pane fade" id="data">
