--- a/experiments/pain/regionCorrelation.html
+++ b/experiments/pain/regionCorrelation.html
@@ -52,6 +52,8 @@
         }
     </style>
 
+   <script> var openshiftURL = 'https://api-trendydots.193b.starter-ca-central-1.openshiftapps.com'</script>
+
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <script>
         // Initialize Firebase
