--- a/experiments/pain/timelineCorrelation.html
+++ b/experiments/pain/timelineCorrelation.html
@@ -56,6 +56,8 @@
         }
     </style>
 
+    <script> var openshiftURL = 'https://api-trendydots.193b.starter-ca-central-1.openshiftapps.com'</script>
+ 
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <script>
         // Initialize Firebase
@@ -150,7 +152,8 @@
         <button id="" type="button" class="btn btn-primary btn-lg" style="background: black; width: 209px; right: 0px; position: absolute" data-toggle="tooltip" data-placement="bottom" title="Explore the regional distribution (map)" data-original-title="Explore the regional distribution (map)" onClick="window.location.href='regionCorrelation.html'">Region Data</button>
 
     </div>
-
+    
+    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="//bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
