--- a/index.html
+++ b/index.html
@@ -278,7 +278,9 @@
                     <h2 class="section__title">What &nbsp; we &nbsp; do</h2>
                     <p class="section__description">
                         <span class="section__description-inner">
-                             We apply data science best practices to big data, aimig to produce highly valuable knowledge. With a strong focus on user experience, we produce reports that tell stories with data.
+                             We apply data science best practices to big data, aimig to produce highly valuable knowledge.
+                             The trendy dots platform is a meeting point combining and correlating data from large public sources.
+                             With a strong focus on user experience, we produce reports that tell stories with data.
 						    </span>
                     </p>
                 </div>
