--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                     <p class="section__description">
                         <span class="section__description-inner">
                              We apply data science best practices to big data, aimig to produce highly valuable knowledge.
-                             The trendy dots platform is a meeting point combining and correlating data from large public sources.
+                             The trendy dots platform is a meeting point for combining and correlating data from large public sources.
                              With a strong focus on user experience, we produce reports that tell stories with data.
 						    </span>
                     </p>
