--- a/experiments/pain/regionCorrelation.html
+++ b/experiments/pain/regionCorrelation.html
@@ -52,7 +52,7 @@
         }
     </style>
 
-   <script> var openshiftURL = 'https://td-api-td-api.1d35.starter-us-east-1.openshiftapps.com/'</script>
+   <script> var openshiftURL = 'https://td-api-td-api.1d35.starter-us-east-1.openshiftapps.com'</script>
 
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <script>
