--- a/experiments/pain/regionCorrelation.html
+++ b/experiments/pain/regionCorrelation.html
@@ -53,6 +53,7 @@
     </style>
 
    <script> var openshiftURL = 'https://td-api-td-api.1d35.starter-us-east-1.openshiftapps.com'</script>
+   <script> //var openshiftURL = 'http://0.0.0.0:8080'</script>
 
     <script src="https://www.gstatic.com/firebasejs/4.11.0/firebase.js"></script>
     <script>
@@ -68,6 +69,7 @@
 
         firebase.initializeApp(config);
     </script>
+    <script src="countries.js"></script>
 </head>
 
 <body>
