--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
     <title>Trendy Dots</title>
     <meta name="description" content="An implementation of Gil Huybrecht's Outdoors design" />
