--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <h2 class="section__title">our &nbsp; story</h2>
                     <p class="section__description">
                         <span class="section__description-inner">
-						    Trendy Dots is a boutique digital lab. making trend and prescriptive analysis on the new and old markets. We model the internet user behaviours and forecast the evolution of markets, products, companies, people, etc. using belading egde AI algorithms.
+						    Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We model the internet user behaviours and forecast the evolution of markets, products, companies, people, etc. using belading egde AI algorithms.
 						  </span>
                     </p>
                 </div>
@@ -240,8 +240,8 @@
                         <span class="section__facts-detail">Discovering internet behaviour</span>
                     </li>
                     <li class="section__facts-item">
-                        <h3 class="section__facts-title">Predicitve Analysis</h3>
-                        <span class="section__facts-detail">Predicting collective interest</span>
+                        <h3 class="section__facts-title">Exploratory Data Analysis</h3>
+                        <span class="section__facts-detail">Analyze collective interest through innovative techniques</span>
                     </li>
                     <!-- 
                     <li class="section__facts-item">
