--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         h3 {
             margin: 0px
         }
+
     </style>
     <style type="text/css">
         html,
@@ -363,6 +364,20 @@
             font-weight: 400;
             color: black
         }
+        
+        @media only screen and (max-width: 768px) {
+            /* For mobile phones: */
+            .gwd-p-1em6 {
+                position: absolute;
+                font-family: Montserrat;
+                margin-right: 10%;
+                left: 10%;
+                font-weight: 300;
+                top: 150px;
+                font-size: 3vw;
+            }
+        }
+
     </style>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700|Oswald|Lato|Roboto|Roboto+Condensed|Ubuntu" rel="stylesheet" type="text/css">
 
@@ -386,8 +401,8 @@
         </div>
         <div class="gwd-div-9729 gwd-div-1521">
             <p class="gwd-p-6mvh">our story</p>
-            <p class="gwd-p-1em6"><span class="gwd-span-1nog">
-        Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative AI algorithms.</span>
+            <p class="gwd-p-1em6">
+        Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative AI algorithms.
                 <br>
 
             </p>
@@ -472,6 +487,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-113784035-1');
+
     </script>
 </body>
 
