final spacing fixes

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
             position: absolute;
             height: 24px;
             width: 155px;
-            left: 60px;
+            left: 10%;
             top: 0px
         }
         
