--- a/invest/index.html
+++ b/invest/index.html
@@ -71,10 +71,10 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">Insights into trading Shares, Indices, Forex, Commodities and Cryptocurrencies</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        We offer up-to-date information which helps you decide about transactions on a brad spectrum of opportunities. Fast and reliable,
-        the trendy dots investor news compiles headlines from the most read media poutlets in the world and categorizes them
-        according to your setting. You will get daily digests over news coverage, global impact and interest in the events,
-        companies, currencies, etc. you set.
+          We offer up-to-date information which helps you decide about transactions on a broad spectrum of opportunities. Fast and reliable,
+          the trendy dots investor news compiles headlines from the most read media outlets in the world and categorizes them
+          according to your setting. You will get daily digests over news coverage, global impact and interest in the events,
+          companies, currencies, etc. you set.
 
       </p>
     </div>
@@ -88,7 +88,7 @@
       <p class="">
         As we are working hard to achieve a great quality platform, we need you expert opinion. Subscribing to the news means you
         will receive emails with our progress. You are automatically included in alpha release candidates and have a chance
-        to be selected in the alpha testing session. </p>
+        to be selected for the alpha testing session. </p>
 
       <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
         <form accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" class="form-style">
