--- a/invest/index.html
+++ b/invest/index.html
@@ -70,7 +70,7 @@
   </section>
   <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal">Insights into trading Shares, Indices, Forex, Commodities and Cryptocurrencies</h1>
+      <h1 class="my-4 font-normal">Insights into trading company shares, indices, Forex, commodities, cryptocurrencies and world events</h1>
       <p class="leading-normal mb-4 text-grey-dark">
           We offer up-to-date information which helps you decide about transactions on a broad spectrum of opportunities. Fast and reliable,
           the trendy dots investor news compiles headlines from the most read media outlets in the world and categorizes them
