--- a/invest/index.html
+++ b/invest/index.html
@@ -23,10 +23,10 @@
 
     @media (min-width: 768px) {
       .form-style {
-      display: flex;
-      margin: 0;
-      width: 100%;
-    }
+        display: flex;
+        margin: 0;
+        width: 100%;
+      }
     }
   </style>
 </head>
@@ -36,13 +36,15 @@
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%;
 ">
-<span class="flex items-center">
-    <a href="https://trendydots.com" class="block text-left" target="_blank">
-      <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo">
-    </a>
-    &nbsp;
-    <b class="text-lg flex text-left"> investor<span style="color: #FFCA28; display: inline; text-indent: 0.2em">news </span></b>
-  </span>
+    <span class="flex items-center">
+      <a href="https://trendydots.com" class="block text-left" target="_blank">
+        <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo">
+      </a>
+      &nbsp;
+      <b class="text-lg flex text-left"> investor
+        <span style="color: #FFCA28; display: inline; text-indent: 0.2em">news </span>
+      </b>
+    </span>
     <ul class="text-sm text-grey-dark list-reset flex items-center">
       <li>
         <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
@@ -62,20 +64,23 @@
       <img src="./assets/img/in0.png" alt="">
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal">Information enpowers good decissions.</h1>
+      <h1 class="my-4 font-normal">Information empowers good decisions.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
         We offer an intuitive, easy to use way to for getting informed about the things that matter. When you are investing in equity,
-        getting news about the companies and products you onwn is essential. </p>
+        getting news about the companies and products you own is essential.
+      </p>
     </div>
   </section>
   <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal">Insights into trading company shares, indices, Forex, commodities, cryptocurrencies and world events</h1>
+      <h1 class="my-4 font-normal">
+          News insights into company shares, indices, Forex, commodities, cryptocurrencies and world events
+      </h1>
       <p class="leading-normal mb-4 text-grey-dark">
-          We offer up-to-date information which helps you decide about transactions on a broad spectrum of opportunities. Fast and reliable,
-          the trendy dots investor news compiles headlines from the most read media outlets in the world and categorizes them
-          according to your setting. You will get daily digests over news coverage, global impact and interest in the events,
-          companies, currencies, etc. you set.
+        We offer up-to-date information which helps you decide about transactions on a broad spectrum of opportunities. Fast and
+        reliable, the trendy dots investor news compiles headlines from the most read media outlets in the world and categorizes
+        them according to your setting. You will get daily digests over news coverage, global impact and interest in the
+        events, companies, currencies, etc. you set.
 
       </p>
     </div>
@@ -125,7 +130,7 @@
         </div>
       </div>
     </div>
-    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendy dots. All rights reserved.</div>
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All rights reserved.</div>
   </footer>
 </body>
 
