increased font on header

--- a/invest/index.html
+++ b/invest/index.html
@@ -41,7 +41,7 @@
         <img src="assets/img/logo.png" class="h-8 sm:h-8 rounded-full" alt="logo">
       </a>
       &nbsp;
-      <b class="text-lg flex text-left"> investor
+      <b class="text-lg flex text-left" style="font-size: 1.35rem;"> investor
         <span style="color: #FFCA28; display: inline; text-indent: 0.2em">news </span>
       </b>
     </span>
