--- a/invest/index.html
+++ b/invest/index.html
@@ -91,7 +91,7 @@
   </section>
   <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8" id="subscribe-section">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
-      <h3 class="text-2xl">Subscribe to news</h3>
+      <h3 class="text-2xl">Join our journey</h3>
       <p class="">
         As we are working hard to achieve a great quality platform, we need you expert opinion. Subscribing to the news means you
         will receive emails with our progress. You are automatically included in alpha release candidates and have a chance
