--- a/invest/index.html
+++ b/invest/index.html
@@ -93,9 +93,9 @@
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
       <h3 class="text-2xl">Join our journey</h3>
       <p class="">
-        As we are working hard to achieve a great quality platform, we need you expert opinion. Subscribing to the news means you
-        will receive emails with our progress. You are automatically included in alpha release candidates and have a chance
-        to be selected for the alpha testing session. </p>
+        As we are working hard to achieve a great quality platform, we need your expert opinion. Subscribing to the news means you
+        will receive emails with our progress and surveys where you can offer feedback. You are automatically included in
+        the early platform adopter program and have a chance to be selected for the beta testing session. </p>
 
       <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
         <form accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" class="form-style">
