--- a/invest/index.html
+++ b/invest/index.html
@@ -67,7 +67,7 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">Information empowers good decisions.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        We offer an intuitive, easy to use way to for getting informed about the things that matter. When you are investing in equity,
+        We offer an intuitive, easy to use way for getting informed about the things that matter. When you are investing in equity,
         getting news about the companies and products you own is essential.
       </p>
     </div>
@@ -133,6 +133,21 @@
     </div>
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All rights reserved.</div>
   </footer>
+
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
+   <script>
+       window.dataLayer = window.dataLayer || [];
+
+       function gtag() {
+           dataLayer.push(arguments);
+       }
+       gtag('js', new Date());
+
+       gtag('config', 'UA-113784035-1');
+
+   </script>
+
 </body>
 
 </html>
