added eu cookie popup

--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -29,9 +29,14 @@
       }
     }
   </style>
+
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+
 </head>
 
-<body>
+<body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact">
   <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%;
@@ -98,7 +103,7 @@
       <p class="leading-normal mb-4 text-grey-dark">
         We offer an intuitive, easy to use way for getting informed about the things that matter. You get to make as many article
         drafts you want. Easily search through your drafts, compare them and choose the bes one for your publication foundation.
-        </p>
+      </p>
     </div>
   </section>
 
