--- a/invest/index.html
+++ b/invest/index.html
@@ -29,9 +29,14 @@
       }
     }
   </style>
+
+  <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
+  <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+
 </head>
 
-<body>
+<body class="htmlNoPages eupopup eupopup-bottom eupopup-style-compact">
   <nav class="font-sans bg-white text-center flex justify-between p-4 container overflow-hidden" style="
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     max-width: 100%;
@@ -134,19 +139,19 @@
     <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All rights reserved.</div>
   </footer>
 
-   <!-- Global site tag (gtag.js) - Google Analytics -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
-   <script>
-       window.dataLayer = window.dataLayer || [];
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113784035-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-       function gtag() {
-           dataLayer.push(arguments);
-       }
-       gtag('js', new Date());
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-       gtag('config', 'UA-113784035-1');
+    gtag('config', 'UA-113784035-1');
 
-   </script>
+  </script>
 
 </body>
 
