--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -85,8 +85,10 @@
         Ideas notepad to experiment with headlines and plan your article
       </h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        We offer an intuitive, easy to use way for getting informed about the things that matter. You get to make as many article
-        drafts you want. Easily search through your drafts, compare them and choose the best one for your publication’s foundation.
+        We offer up-to-date information which helps you decide about a broad spectrum of opportunities. Fast and reliable, the trendy
+        dots data journalism platform compiles headlines from the most read media outlets in the world and categorizes them
+        according to your settings. You can experiment with writing your own headlines, statements and plan your publication
+        structure alongside this data.
       </p>
     </div>
     <div class="w-full lg:w-1/2">
