--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -103,7 +103,7 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">Your article drafts in one place. Make as many as you want.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        We offer an intuitive, easy to use way for getting informed about the things that matter. You get to make as many article
+        An intuitive, easy to use way for getting informed about the things that matter. You get to make as many article
         drafts you want. Easily search through your drafts, compare them and choose the bes one for your publication foundation.
       </p>
     </div>
