--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -104,7 +104,7 @@
       <h1 class="my-4 font-normal">Your article drafts in one place. Make as many as you want.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
         An intuitive, easy to use way for getting informed about the things that matter. You get to make as many article
-        drafts you want. Easily search through your drafts, compare them and choose the bes one for your publication foundation.
+        drafts you want. Easily search through your drafts, compare them and choose the best one for your publication foundation.
       </p>
     </div>
   </section>
