--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
                 <br>
                 <br>
 
-                <a href="https://trendydots.com/datajournalism/" target="_blank" style="text-decoration: none;">
+                <a href="https://trendydots.com/datajournalism/" target="_blank" style="text-decoration: none; margin-left: 1px;">
                     <img src="td-dj.png" style="height: 30px;
                     border: 1px solid #212121;
                     /* border-radius: 16px;
