--- a/index.html
+++ b/index.html
@@ -438,7 +438,8 @@
                     border: 1px solid #212121;
                     /* border-radius: 16px;
                     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
-                    padding: 2px 0 1px 0;">
+                    padding: 2px 0 1px 0;
+                    margin: 1px;">
                 </a>
 
                 
@@ -447,7 +448,8 @@
                     border: 1px solid #212121;
                     /* border-radius: 16px;
                     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
-                    padding: 3px 0 2px 0">
+                    padding: 3px 0 2px 0;
+                    margin: 1px;">
                 </a>
 
             </p>
