--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -51,6 +51,12 @@
       </b>
     </span>
     <ul class="text-sm text-grey-dark list-reset flex items-center">
+        <li>
+            <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">EN</a>
+          </li>
+          <li>
+            <a href="./pt/" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">PT</a>
+          </li>
       <!-- 
       <li>
         <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
