--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
   <link rel="stylesheet" type="text/css" href=https://cdn.rawgit.com/amiechen/stitches-template-generator/master/public/stitches.css>
-  <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
+    <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp
     crossorigin="anonymous">
   <title>trendy dots - data journalism platform</title>
@@ -53,7 +53,10 @@
     <ul class="text-sm text-grey-dark list-reset flex items-center">
 
       <li>
-        <a href="https://trendydots.com/datajournalism/" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">EN</a>
+        <a href="../" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">EN</a>
+      </li>
+      <li>
+        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">PT</a>
       </li>
       <!-- 
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Pricing</a></li>
@@ -71,9 +74,10 @@
       <img src="./assets/img/undraw_report.svg" alt="">
     </div>
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
-      <h1 class="my-4 font-normal">Tendências de dados para iniciar seu artigo</h1>
+      <h1 class="my-4 font-normal">Tendências de dados para iniciar o seu artigo</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        Quando inicia o seu artigo, as tendências de dados são essenciais. Obterá as últimas tendências de pesquisa na Internet,
+        Quando inicia o seu artigo, as tendências de dados são essenciais. Obterá as últimas tendências de pesquisa na
+        Internet,
         a sua distribuição geográfica e as últimas notícias sobre o assunto que lhe interessa.
       </p>
     </div>
@@ -82,12 +86,15 @@
   <section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">
-        Bloco de notas de idéias para experimentar com títulos e para planear o seu artigo
+        Bloco de notas com idéias para experimentar títulos e para planear o seu artigo
       </h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        Oferecemos informações atualizadas que o/a ajudam a decidir sobre um amplo espectro de oportunidades. Rápida e confiável,
-        a moderna plataforma de jornalismo trendy dots compila os títulos dos meios de comunicação mais lidos no mundo e
-        categoriza de acordo com suas configurações. Pode experimentar escrever os seus próprios títulos, afirmações e planear
+        Oferecemos informações atualizadas que o/a ajudam a decidir sobre um amplo espectro de oportunidades. Rápida e
+        confiável,
+        a moderna plataforma de jornalismo trendy dots compila os títulos dos meios de comunicação mais lidos no mundo
+        e
+        categoriza de acordo com suas configurações. Pode experimentar escrever os seus próprios títulos, afirmações e
+        planear
         a sua estrutura de publicação juntamente com esses dados.
       </p>
     </div>
@@ -103,8 +110,9 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">Esboços do seu artigo num só lugar. Elabore quantos quiser.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        Uma maneira intuitiva e fácil de usar para se informar sobre as coisas importantes. Pode elaborar quantos rascunhos de artigos
-        quiser. Pesquise facilmente seus rascunhos, compare-os e escolha o melhor para a base da sua publicação.
+        Uma maneira intuitiva e fácil de usar para se informar sobre as coisas importantes. Pode elaborar quantos
+        rascunhos de artigos
+        quiser. Pesquise facilmente os seus rascunhos, compare-os e escolha o melhor para a base da sua publicação.
       </p>
     </div>
   </section>
@@ -112,16 +120,18 @@
 
   <section class="antialiased font-sans w-full bg-grey-lighter text-left text-black py-8" id="subscribe-section">
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
-      <h3 class="text-2xl">Join our journey</h3>
+      <h3 class="text-2xl">Junte-se à nossa viagem</h3>
       <p class="">
-        As we are working hard to achieve a great quality platform, we need your expert opinion. Subscribing to the news means you
-        will receive emails with our progress and surveys where you can offer feedback. You are automatically included in
-        the early platform adopter program and have a chance to be selected for the beta testing session. </p>
+        Como trabalhamos muito para alcançar uma plataforma de grande qualidade, precisamos da sua opinião
+        especializada. Inscrever-se nas notícias significa que receberá e-mails com o nosso progresso e pesquisas, onde
+        poderá oferecer o seu feedback. Será automaticamente inserido no programa de adoção inicial da plataforma e
+        terá a oportunidade de ser selecionado para a sessão de testes beta. </p>
 
       <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
-        <form accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" class="form-style">
-          <input type="email" class="block w-full focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email" placeholder="Insira o seu email "
-            required="">
+        <form accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST"
+          class="form-style">
+          <input type="email" class="block w-full focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email"
+            placeholder="Insira o seu email " required="">
           <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
           <button type="submit" style="min-height: 30px; white-space:nowrap;" class="uppercase text-sm text-white focus:outline-0 w-full sm:w-auto bg-black hover:bg-grey-darkest focus:bg-grey-light tracking-wide px-6">Inscreva-se</button>
         </form>
@@ -136,12 +146,10 @@
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">Sobre nós</h4>
-        <p>Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We
-          model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative
-          AI algorithms. </p>
+        <p>Trendy Dots é um pequeno laboratório digital que efetua análise exploratória de dados e de tendências sobre novos e antigos mercados. Modelamos o comportamento da Internet e prevemos a evolução de mercados, produtos, empresas, etc., usando algoritmos de IA inovadores.</p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
-        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Follow Us</h4>
+        <h4 class="inline-block py-2 px-3 uppercase font-bold tracking-wide text-grey-darkest">Siga-nos</h4>
         <div class="flex pl-0 md:pl-4 justify-start">
           <!-- 
         <a class="block flex items-center text-grey-darkest hover:text-black mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
@@ -153,7 +161,8 @@
         </div>
       </div>
     </div>
-    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All rights reserved.</div>
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All
+      rights reserved.</div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
