--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
   <link rel="stylesheet" type="text/css" href=https://cdn.rawgit.com/amiechen/stitches-template-generator/master/public/stitches.css>
-  <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
+    <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp
     crossorigin="anonymous">
   <title>trendy dots - data journalism platform</title>
@@ -21,6 +21,10 @@
       width: 100%;
     }
 
+    .grecaptcha-badge {
+      display: none;
+    }
+
     @media (min-width: 768px) {
       .form-style {
         display: flex;
@@ -33,6 +37,12 @@
   <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
   <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
   <script src="../js/jquery-eu-cookie-law-popup.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script>
+    function onSubmit(token) {
+      document.getElementById("invisible-recaptcha-form").submit();
+    }
+  </script>
 
 </head>
 
@@ -51,12 +61,12 @@
       </b>
     </span>
     <ul class="text-sm text-grey-dark list-reset flex items-center">
-        <li>
-            <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">EN</a>
-          </li>
-          <li>
-            <a href="./pt/" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">PT</a>
-          </li>
+      <li>
+        <a target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline" style="color:grey">EN</a>
+      </li>
+      <li>
+        <a href="./pt/" target="_self" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">PT</a>
+      </li>
       <!-- 
       <li>
         <a href="https://trendydots.com" target="_blank" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Main Page</a>
@@ -79,7 +89,8 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">Data trends to start your article</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        When you are starting your article, data trends are essential. You will get the latest internet search trends, geographical
+        When you are starting your article, data trends are essential. You will get the latest internet search trends,
+        geographical
         distribution of internet searches and latest news about the subject that interests you.
       </p>
     </div>
@@ -91,9 +102,12 @@
         Ideas notepad to experiment with headlines and plan your article
       </h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        We offer up-to-date information which helps you decide about a broad spectrum of opportunities. Fast and reliable, the trendy
-        dots data journalism platform compiles headlines from the most read media outlets in the world and categorizes them
-        according to your settings. You can experiment with writing your own headlines, statements and plan your publication
+        We offer up-to-date information which helps you decide about a broad spectrum of opportunities. Fast and
+        reliable, the trendy
+        dots data journalism platform compiles headlines from the most read media outlets in the world and categorizes
+        them
+        according to your settings. You can experiment with writing your own headlines, statements and plan your
+        publication
         structure alongside this data.
       </p>
     </div>
@@ -109,8 +123,10 @@
     <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
       <h1 class="my-4 font-normal">Your article drafts in one place. Make as many as you want.</h1>
       <p class="leading-normal mb-4 text-grey-dark">
-        An intuitive, easy to use way for getting informed about the things that matter. You get to make as many article
-        drafts you want. Easily search through your drafts, compare them and choose the best one for your publication foundation.
+        An intuitive, easy to use way for getting informed about the things that matter. You get to make as many
+        article
+        drafts you want. Easily search through your drafts, compare them and choose the best one for your publication
+        foundation.
       </p>
     </div>
   </section>
@@ -120,16 +136,20 @@
     <div class="container mx-auto max-w-xl py-8 font-normal leading-normal">
       <h3 class="text-2xl">Join our journey</h3>
       <p class="">
-        As we are working hard to achieve a great quality platform, we need your expert opinion. Subscribing to the news means you
-        will receive emails with our progress and surveys where you can offer feedback. You are automatically included in
+        As we are working hard to achieve a great quality platform, we need your expert opinion. Subscribing to the
+        news means you
+        will receive emails with our progress and surveys where you can offer feedback. You are automatically included
+        in
         the early platform adopter program and have a chance to be selected for the beta testing session. </p>
 
       <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
-        <form accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data" method="POST" class="form-style">
-          <input type="email" class="block w-full focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email" placeholder="Enter your email"
-            required="">
+        <form id="invisible-recaptcha-form" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data"
+          method="POST" class="form-style">
+          <input type="email" class="block w-full focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email"
+            placeholder="Enter your email" required="">
           <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
-          <button type="submit" style="min-height: 30px;" class="uppercase text-sm text-white focus:outline-0 w-full sm:w-auto bg-black hover:bg-grey-darkest focus:bg-grey-light tracking-wide px-6">Subscribe</button>
+          <button type="submit" style="min-height: 30px;" class="g-recaptcha uppercase text-sm text-white focus:outline-0 w-full sm:w-auto bg-black hover:bg-grey-darkest focus:bg-grey-light tracking-wide px-6"
+            data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Subscribe</button>
         </form>
       </div>
     </div>
@@ -142,8 +162,10 @@
       </a>
       <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
         <h4 class="py-2 uppercase font-bold tracking-wide">About US</h4>
-        <p>Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old markets. We
-          model the internet behaviour and forecast the evolution of markets, products, companies, etc. using innovative
+        <p>Trendy Dots is a boutique digital lab. making trend and exploratory data analysis on the new and old
+          markets. We
+          model the internet behaviour and forecast the evolution of markets, products, companies, etc. using
+          innovative
           AI algorithms. </p>
       </div>
       <div class="text-grey-dark flex flex-col items-center w-full md:w-1/4 mt-6 md:mt-0">
@@ -159,7 +181,8 @@
         </div>
       </div>
     </div>
-    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All rights reserved.</div>
+    <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 trendydots.com All
+      rights reserved.</div>
   </footer>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
