--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -38,11 +38,13 @@
   <link rel="stylesheet" type="text/css" href="../css/jquery-eu-cookie-law-popup.css" />
   <script src="../js/jquery-eu-cookie-law-popup.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <!--
   <script>
     function onSubmit(token) {
       document.getElementById("invisible-recaptcha-form").submit();
     }
   </script>
+-->
 
 </head>
 
@@ -141,8 +143,45 @@
         will receive emails with our progress and surveys where you can offer feedback. You are automatically included
         in
         the early platform adopter program and have a chance to be selected for the beta testing session. </p>
+      <!-- New form -->
+      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf"
+        enctype="multipart/form-data" method="POST">
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
+            required>
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email" style="color: black;">
+            Your email
+          </label>
+        </div>
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
+            type="text">
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
+            style="color: black;">
+            Your affiliation (optional)
+          </label>
+        </div>
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation" name="fieldRelation"
+            type="text">
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
+            style="color: black;">
+            How are you related to the data journalism field?
+          </label>
+        </div>
 
-      <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
+        <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
+        <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
+        <br />
+        <div class="flex items-center justify-between">
+          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit" 
+          style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
+            Subscribe
+          </button>
+        </div>
+      </form>
+      <!--
+      <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">        
         <form id="invisible-recaptcha-form" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data"
           method="POST" class="form-style">
           <input type="email" class="block w-full focus:outline-0 bg-white py-3 px-6 mb-2 sm:mb-0" name="email"
@@ -152,6 +191,7 @@
             data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Subscribe</button>
         </form>
       </div>
+      -->
     </div>
   </section>
 
