--- a/datajournalism/pt/index.html
+++ b/datajournalism/pt/index.html
@@ -136,6 +136,45 @@
         poderá oferecer o seu feedback. Será automaticamente inserido no programa de adoção inicial da plataforma e
         terá a oportunidade de ser selecionado para a sessão de testes beta. </p>
 
+      <!-- New form -->
+      <form class="font-sans text-sm rounded w-full max-w-md mx-auto my-8 px-8 pt-6 pb-8" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf"
+        enctype="multipart/form-data" method="POST">
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
+            required>
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email" style="color: black;">
+            Seu email
+          </label>
+        </div>
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
+            type="text">
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
+            style="color: black;">
+            Sua afiliação (opcional)
+          </label>
+        </div>
+        <div class="relative border rounded mb-4 shadow appearance-none label-floating">
+          <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation" name="fieldRelation"
+            type="text">
+          <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
+            style="color: black;">
+            Como você está relacionado ao campo de jornalismo de dados?
+          </label>
+        </div>
+
+        <div class="g-recaptcha" data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy"></div>
+        <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
+        <br />
+        <div class="flex items-center justify-between">
+          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit"
+          style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
+            Inscreva-se
+          </button>
+        </div>
+      </form>
+
+      <!-- 
       <div class="max-w-sm mt-4 sm:flex" style="box-shadow: 0 1.5em 85px 0 rgba(0,0,0,.2);">
         <form id="invisible-recaptcha-form" accept-charset="UTF-8" action="https://usebasin.com/f/06dcf3d4ebaf" enctype="multipart/form-data"
           method="POST" class="form-style">
@@ -146,6 +185,7 @@
             data-sitekey="6Lew3SMUAAAAAJ82QoS7gqOTkRI_dhYrFy1f7Sqy" data-callback='onSubmit' data-badge="inline">Inscreva-se</button>
         </form>
       </div>
+    -->
     </div>
   </section>
 
