adde proper spacing

--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -148,14 +148,14 @@
         enctype="multipart/form-data" method="POST">
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="email" name="email" type="email"
-            required>
+            required style="height: 5em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="email" style="color: black;">
             Your email
           </label>
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="affiliation" name="affiliation"
-            type="text">
+            type="text" style="height: 5em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="affiliation"
             style="color: black;">
             Your affiliation (optional)
@@ -163,7 +163,7 @@
         </div>
         <div class="relative border rounded mb-4 shadow appearance-none label-floating">
           <input class="w-full py-2 px-3 text-grey-darker leading-normal rounded" id="fieldRelation" name="fieldRelation"
-            type="text">
+            type="text" style="height: 6em;">
           <label class="absolute block text-grey-darker pin-t pin-l w-full px-3 py-2 leading-normal" for="fieldRelation"
             style="color: black;">
             How are you related to the data journalism field?
