--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
-  <link rel="stylesheet" type="text/css" href=https://cdn.rawgit.com/amiechen/stitches-template-generator/master/public/stitches.css>
+  <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css">
     <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp
     crossorigin="anonymous">
