--- a/datajournalism/index.html
+++ b/datajournalism/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta property="og:image" content="https://trendydots.com/invest/assets/img/in3.png" />
   <link rel="stylesheet" type="text/css" href="./assets/css/stitches.css">
-    <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
+  <link href=https://fonts.googleapis.com/css?family=Muli:300,400,600,700,800,900 rel="stylesheet">
   <link rel="stylesheet" href=https://use.fontawesome.com/releases/v5.0.13/css/all.css integrity=sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp
     crossorigin="anonymous">
   <title>trendy dots - data journalism platform</title>
@@ -174,8 +174,7 @@
         <input type="hidden" name="comment" value="Subscribe me to trendy dots . data journalism">
         <br />
         <div class="flex items-center justify-between">
-          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit" 
-          style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
+          <button class="bg-black hover:bg-black text-white py-2 px-4" type="submit" style="min-height: 40px; border-radius: 3px; box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);">
             Subscribe
           </button>
         </div>
